--- a/package.json
+++ b/package.json
@@ -23,5 +23,13 @@
     "lint-staged": "^12.3.1",
     "parcel": "^2.2.1",
     "prettier": "2.5.1"
+  },
+  "dependencies": {
+    "@self.id/framework": "^0.1.0",
+    "grommet": "^2.20.0",
+    "ramda": "^0.28.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3"
   }
 }
