--- a/package.json
+++ b/package.json
@@ -16,17 +16,27 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "assert": "^2.0.0",
+    "crypto-browserify": "^3.12.0",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.28.0",
+    "https-browserify": "^1.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.1",
+    "os-browserify": "^0.3.0",
     "parcel": "^2.2.1",
-    "prettier": "2.5.1"
+    "prettier": "2.5.1",
+    "querystring-es3": "^0.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0"
   },
   "dependencies": {
     "@self.id/framework": "^0.1.0",
+    "crypto": "^1.0.1",
     "grommet": "^2.20.0",
+    "ipfs-core": "^0.14.1",
     "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
