--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-indexed-db": "^1.0.12",
     "styled-components": "^5.3.3"
   }
 }
