--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@self.id/framework": "^0.2.0",
     "crypto": "^1.0.1",
+    "ethers": "^5.6.9",
     "grommet": "^2.20.0",
     "ipfs-core": "^0.14.1",
     "ramda": "^0.28.0",
