--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,6 @@
   "semi": false,
   "trailingComma": "none",
   "arrowParens": "avoid",
-  "singleQuote": true
+  "singleQuote": true,
+  "jsxSingleQuote": false
 }
