--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "https-browserify": "^1.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.1",
@@ -44,6 +45,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-indexed-db": "^1.0.12",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "typescript": "^4.7.4",
+    "uuid": "^8.3.2"
   }
 }
