--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "scripts": {
-    "start": "parcel",
-    "build": "parcel build",
-    "prepare": "husky install"
+	"start": "parcel",
+	"build": "parcel build",
+	"prepare": "husky install",
+	"lint": "eslint . --ext=.ts,.tsx"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.10.0",
