--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,9 +10,10 @@ pipelines:
       - step:
           name: Run build
           script:
-            - yarn build
+            - npx parcel build
       - step:
           name: Deploy to cloudflare
+          deployment: Production
           script:
             - npm i -g wrangler
             - wrangler pages publish dist --project-name messenger
