--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-indexed-db": "^1.0.12",
+    "react-router-dom": "^6.6.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.7.4",
     "uuid": "^8.3.2"
