--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "wagmi": "^0.8.6",
     "@metamask/eth-sig-util": "^4.0.1",
     "@self.id/framework": "^0.2.0",
+    "@web3modal/ethereum": "^2.0.0-beta.7",
+    "@web3modal/react": "^2.0.0-beta.7",
     "crypto": "^1.0.1",
     "ethereumjs-util": "^7.1.5",
     "ethers": "^5.6.9",
@@ -49,8 +51,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-indexed-db": "^1.0.12",
+    "react-router-dom": "^6.6.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.7.4",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "wagmi": "^0.8.6"
   }
 }
