--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,6 +5,15 @@ pipelines:
            name: Deploy to prod server
            deployment: Production
            script:
+             - "echo 'prepare tmp dir'"
+             - pipe: atlassian/ssh-run:0.4.0
+               variables:
+                  SSH_USER: $USER
+                  SERVER: $SERVER
+                  MODE: 'command'
+                  COMMAND: > 
+                    mkdir -p /tmp/messenger-deploy
+
              - "echo 'copy deploy script to server'"
              - pipe: atlassian/scp-deploy:1.2.1
                variables:
