--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "start": "parcel",
-    "build": "parcel build --public-url ./",
+    "build": "parcel build --public-url /messenger",
     "prepare": "husky install",
     "lint": "eslint . --ext=.ts,.tsx"
   },
