--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "@metamask/detect-provider": "^2.0.0",
     "@metamask/eth-sig-util": "^4.0.1",
     "@self.id/framework": "^0.2.0",
+    "@types/ramda": "^0.28.23",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@web3modal/ethereum": "^2.0.0-beta.7",
     "@web3modal/react": "^2.0.0-beta.7",
     "crypto": "^1.0.1",
