--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "assert": "^2.0.0",
+    "buffer": "^5.5.0",
     "crypto-browserify": "^3.12.0",
     "eslint": "8.22.0",
     "eslint-config-prettier": "^8.3.0",
@@ -33,6 +34,7 @@
     "querystring-es3": "^0.2.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "string_decoder": "^1.3.0",
     "url": "^0.11.0"
   },
   "dependencies": {
@@ -49,7 +51,7 @@
     "ethereumjs-util": "^7.1.5",
     "ethers": "^5.6.9",
     "grommet": "^2.20.0",
-    "ipfs-core": "^0.16.0",
+    "ipfs-core": "0.18.0",
     "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
