--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/ramda": "^0.28.23",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@wagmi/core": "^0.10.1",
     "@walletconnect/chat-client": "^0.3.4",
     "@web3modal/ethereum": "^2.0.0",
     "@web3modal/react": "^2.0.0-beta.7",
