--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3.9'
 services:
   node:
     build: ./.docker/node
@@ -8,3 +9,6 @@ services:
     ports:
       - 1234:1234
       - 9090:9090
+    
+    mem_limit: "3g"
+
