--- a/package.json
+++ b/package.json
@@ -41,17 +41,16 @@
     "@metamask/detect-provider": "^2.0.0",
     "@metamask/eth-sig-util": "^4.0.1",
     "@metamask/providers": "^10.2.1",
+    "@self.id/framework": "^0.2.0",
     "@types/ramda": "^0.28.23",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@wagmi/core": "^0.10.1",
-    "@walletconnect/chat-client": "^0.3.5",
-    "@web3modal/ethereum": "^2.2.0",
-    "@web3modal/react": "^2.2.0",
+    "@web3modal/ethereum": "^2.0.0",
+    "@web3modal/react": "^2.0.0-beta.7",
     "crypto": "^1.0.1",
     "ethereumjs-util": "^7.1.5",
-    "ethers": "^5.5.1",
-    "grommet": "^2.30.0",
+    "ethers": "^5.6.9",
+    "grommet": "^2.20.0",
     "ipfs-core": "0.18.0",
     "ramda": "^0.28.0",
     "react": "^17.0.2",
@@ -61,6 +60,6 @@
     "styled-components": "^5.3.3",
     "typescript": "^4.7.4",
     "uuid": "^8.3.2",
-    "wagmi": "^0.12.1"
+    "wagmi": "^0.8.6"
   }
 }
